deploy: 245307f7a7db79b7277e847295f8e3498e32faf5

--- a/moves/combat/react_under_fire.html
+++ b/moves/combat/react_under_fire.html
@@ -28,7 +28,7 @@
 <li>Changing the plan, finding a way out, or cleverly bypassing an obstacle: Roll +wits</li>
 </ul>
 <p class="mbs12 mbe12">On a <strong>strong hit</strong>, you succeed and are in control. Take +1 momentum.</p>
-<p class="mbs12 mbe12">On a <strong>weak hit</strong>, you avoid the worst of the danger or overcome the obstacle, but not without a cost. Make a <a href="/moves/suffer" class="link-move">suffer move</a> (-1). You stay in a bad spot.</p>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, the situation worsens. You stay in a bad spot and must <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
+<p class="mbs12 mbe12">On a <strong>weak hit</strong>, you avoid the worst of the danger or overcome the obstacle, but not without a cost. Make a <a href="/starforged-srd/moves/suffer" class="link-move">suffer move</a> (-1). You stay in a bad spot.</p>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, the situation worsens. You stay in a bad spot and must <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
   </body>
 </html>
