--- a/moves/connection/forge_a_bond.html
+++ b/moves/connection/forge_a_bond.html
@@ -25,7 +25,7 @@
 <li>Bolster their influence: When they aid you on a move closely associated with their role, add +2 instead of +1.</li>
 <li>Expand their influence: Give them a second role. When they aid you on a move closely associated with either role, add +1 and take +1 momentum on a hit.</li>
 </ul>
-<p class="mbs12 mbe12">On a <strong>weak hit</strong>, as above, but they ask something more of you first. To gain the bond and the legacy reward, envision the nature of the request, and do it (or <a href="/moves/quest#swear_an_iron_vow" class="link-move">Swear an Iron Vow</a> to see it done).</p>
+<p class="mbs12 mbe12">On a <strong>weak hit</strong>, as above, but they ask something more of you first. To gain the bond and the legacy reward, envision the nature of the request, and do it (or <a href="/starforged-srd/moves/quest#swear_an_iron_vow" class="link-move">Swear an Iron Vow</a> to see it done).</p>
 <p class="mbs12 mbe12">On a <strong>miss</strong>, they reveal a motivation or background that puts you at odds. If you recommit to this relationship, roll both challenge dice, take the lowest value, and clear that number of progress boxes. Then, raise the connection's rank by one (if not already epic).</p></main></article></div>
   </body>
 </html>
