--- a/moves/exploration/finish_an_expedition.html
+++ b/moves/exploration/finish_an_expedition.html
@@ -24,7 +24,7 @@
 <p class="mbs12 mbe12">On a <strong>weak hit</strong>, as above, but you face an unforeseen complication at the end of your expedition. Make the legacy reward one rank lower, and envision what you encounter.</p>
 <p class="mbs12 mbe12">On a <strong>miss</strong>, your destination is lost to you, or you come to understand the true nature or cost of the expedition. Envision what happens and choose one.</p>
 <ul>
-<li>Abandon the expedition: Envision the cost of this setback and <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</li>
+<li>Abandon the expedition: Envision the cost of this setback and <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</li>
 <li>Return to the expedition: Roll both challenge dice, take the lowest value, and clear that number of progress boxes. Then, raise the expedition's rank by one (if not already epic).</li>
 </ul></main></article></div>
   </body>
