--- a/moves/exploration/undertake_an_expedition.html
+++ b/moves/exploration/undertake_an_expedition.html
@@ -28,9 +28,9 @@
 <p class="mbs12 mbe12">On a <strong>strong hit</strong>, you reach a waypoint. Envision the location and mark progress per the rank of the expedition.</p>
 <p class="mbs12 mbe12">On a <strong>weak hit</strong>, as above, but this progress costs you. Choose one.</p>
 <ul>
-<li>Suffer costs en route: Make a <a href="/moves/suffer" class="link-move">suffer move</a> (-2), or two <a href="/moves/suffer" class="link-move">suffer moves</a> (-1).</li>
+<li>Suffer costs en route: Make a <a href="/starforged-srd/moves/suffer" class="link-move">suffer move</a> (-2), or two <a href="/starforged-srd/moves/suffer" class="link-move">suffer moves</a> (-1).</li>
 <li>Face a peril at the waypoint: Envision what you encounter.</li>
 </ul>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, you are waylaid by a crisis, or arrive at a waypoint to confront an immediate hardship or threat. Do not mark progress, and <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, you are waylaid by a crisis, or arrive at a waypoint to confront an immediate hardship or threat. Do not mark progress, and <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
   </body>
 </html>
