--- a/moves/legacy/continue_a_legacy.html
+++ b/moves/legacy/continue_a_legacy.html
@@ -28,8 +28,8 @@
 </ul>
 <p class="mbs12 mbe12">For each <strong>weak hit</strong>, choose one from below, or one from the miss options.</p>
 <ul>
-<li>See it through: Choose one of the former character&#39;s unfinished quests, and <a href="/moves/quest#swear_an_iron_vow" class="link-move">Swear an Iron Vow</a> (with an automatic strong hit) to see it done. You may immediately mark up to half their earned progress (round down) on this quest.</li>
-<li>Rebuild a connection: Name one of the former character&#39;s connections, and envision how time or circumstances have changed them in a dramatic way. When you <a href="/moves/connection#make_a_connection" class="link-move">Make a Connection</a> with them, take an automatic strong hit and mark two ticks on your bonds legacy track.</li>
+<li>See it through: Choose one of the former character&#39;s unfinished quests, and <a href="/starforged-srd/moves/quest#swear_an_iron_vow" class="link-move">Swear an Iron Vow</a> (with an automatic strong hit) to see it done. You may immediately mark up to half their earned progress (round down) on this quest.</li>
+<li>Rebuild a connection: Name one of the former character&#39;s connections, and envision how time or circumstances have changed them in a dramatic way. When you <a href="/starforged-srd/moves/connection#make_a_connection" class="link-move">Make a Connection</a> with them, take an automatic strong hit and mark two ticks on your bonds legacy track.</li>
 <li>Explore familiar ground: Name a location that was meaningful to the former character. When you first visit that place, envision how it has changed or is endangered. Then, mark two ticks on your discoveries legacy track.</li>
 </ul>
 <p class="mbs12 mbe12">For each <strong>miss</strong>, choose one.</p>
