--- a/moves/quest.html
+++ b/moves/quest.html
@@ -34,16 +34,16 @@
 </ul>
 <p class="mbs12 mbe12">...you may mark progress per the rank of the vow.</p></section><footer class="iron-card-footer type-compact"><span class="iron-source-info"><cite>Ironsworn: Starforged</cite>, p. 157</span></footer></article></section><section><article class="iron-card ironsworn-move move-card m16"><header class="iron-card-header" color-scheme="dark"><h3 class="move-title type-display" id="fulfill_your_vow">Fulfill Your Vow</h3></header><section class="iron-card-body"><span class="progress-move-label">Progress Move</span><p class="mbs12 mbe12"><strong>When you reach the end of your quest</strong>, roll the challenge dice and compare to your progress.</p>
 <p class="mbs12 mbe12">On a <strong>strong hit</strong>, your vow is fulfilled. Mark a reward on your quests legacy track per the vow's rank: troublesome=1 tick; dangerous=2 ticks; formidable=1 box; extreme=2 boxes; epic=3 boxes. Any allies who shared this vow also mark the reward.</p>
-<p class="mbs12 mbe12">On a <strong>weak hit</strong>, as above, but there is more to be done or you realize the truth of your quest. If you <a href="/moves/quest#swear_an_iron_vow" class="link-move">Swear an Iron Vow</a> to set things right, take your full legacy reward. Otherwise, make the reward one rank lower.</p>
+<p class="mbs12 mbe12">On a <strong>weak hit</strong>, as above, but there is more to be done or you realize the truth of your quest. If you <a aria-current="page" href="/starforged-srd/moves/quest#swear_an_iron_vow" class="router-link-active router-link-exact-active link-move">Swear an Iron Vow</a> to set things right, take your full legacy reward. Otherwise, make the reward one rank lower.</p>
 <p class="mbs12 mbe12">On a <strong>miss</strong>, your vow is undone through an unexpected complication or realization. Envision what happens and choose one.</p>
 <ul>
-<li>Give up on the quest: <a href="/moves/quest#forsake_your_vow" class="link-move">Forsake Your Vow</a>.</li>
+<li>Give up on the quest: <a aria-current="page" href="/starforged-srd/moves/quest#forsake_your_vow" class="router-link-active router-link-exact-active link-move">Forsake Your Vow</a>.</li>
 <li>Recommit to the quest: Roll both challenge dice, take the lowest value, and clear that number of progress boxes. Then, raise the vow's rank by one (if not already epic).</li>
 </ul></section><footer class="iron-card-footer type-compact"><span class="iron-source-info"><cite>Ironsworn: Starforged</cite>, p. 158</span></footer></article></section><section><article class="iron-card ironsworn-move move-card m16"><header class="iron-card-header" color-scheme="dark"><h3 class="move-title type-display" id="forsake_your_vow">Forsake Your Vow</h3></header><section class="iron-card-body"><p class="mbs12 mbe12"><strong>When you renounce your quest, betray your promise, or the goal is lost to you</strong>, clear the vow.</p>
 <p class="mbs12 mbe12">Then, envision the impact of this failure and choose one or more as appropriate to the nature of the vow. Any allies who shared this vow may also envision a cost.</p>
 <ul>
-<li>You are demoralized or dispirited: <a href="/moves/suffer#endure_stress" class="link-move">Endure Stress</a>.</li>
-<li>A connection loses faith: <a href="/moves/connection#test_your_relationship" class="link-move">Test Your Relationship</a> when you next interact.</li>
+<li>You are demoralized or dispirited: <a href="/starforged-srd/moves/suffer#endure_stress" class="link-move">Endure Stress</a>.</li>
+<li>A connection loses faith: <a href="/starforged-srd/moves/connection#test_your_relationship" class="link-move">Test Your Relationship</a> when you next interact.</li>
 <li>You must abandon a path or resource: Discard an asset.</li>
 <li>Someone else pays a price: Envision how a person, being, or community bears the cost of the failure.</li>
 <li>Someone else takes advantage: Envision how an enemy gains power.</li>
