--- a/moves/recover/heal.html
+++ b/moves/recover/heal.html
@@ -27,7 +27,7 @@
 <li>Provide care: Roll +wits</li>
 </ul>
 <p class="mbs12 mbe12">On a <strong>strong hit</strong>, the care is helpful. If you (or the ally under your care) are wounded, clear the impact and take or give +2 health. Otherwise, take or give +3 health.</p>
-<p class="mbs12 mbe12">On a <strong>weak hit</strong>, as above, but the recovery costs extra time or resources. Choose one: <a href="/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-2) or <a href="/moves/suffer#sacrifice_resources" class="link-move">Sacrifice Resources</a> (-2).</p>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, the aid is ineffective and the situation worsens. <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
+<p class="mbs12 mbe12">On a <strong>weak hit</strong>, as above, but the recovery costs extra time or resources. Choose one: <a href="/starforged-srd/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-2) or <a href="/starforged-srd/moves/suffer#sacrifice_resources" class="link-move">Sacrifice Resources</a> (-2).</p>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, the aid is ineffective and the situation worsens. <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
   </body>
 </html>
