--- a/moves/recover/resupply.html
+++ b/moves/recover/resupply.html
@@ -32,6 +32,6 @@
 <li>If you are in need of a specific item or resource that can reasonably be obtained, you acquire it. Take +1 momentum.</li>
 </ul>
 <p class="mbs12 mbe12">On a <strong>weak hit</strong>, as above, but you must first deal with a cost, complication, or demand. Envision the nature of this obstacle.</p>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, you encounter an unexpected peril. <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, you encounter an unexpected peril. <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
   </body>
 </html>
