--- a/moves/scene_challenge/begin_the_scene.html
+++ b/moves/scene_challenge/begin_the_scene.html
@@ -26,6 +26,6 @@
 <li>You are on equal footing: Six segments</li>
 <li>You have strong advantage: Eight segments</li>
 </ul>
-<p class="mbs12 mbe12">When the clock is full, you must <a href="/moves/scene_challenge#finish_the_scene" class="link-move">Finish the Scene</a>.</p></main></article></div>
+<p class="mbs12 mbe12">When the clock is full, you must <a href="/starforged-srd/moves/scene_challenge#finish_the_scene" class="link-move">Finish the Scene</a>.</p></main></article></div>
   </body>
 </html>
