--- a/moves/scene_challenge/face_danger.html
+++ b/moves/scene_challenge/face_danger.html
@@ -29,6 +29,6 @@
 </ul>
 <p class="mbs12 mbe12">On a <strong>strong hit</strong>, you are successful and mark progress. On a <strong>strong hit with a match</strong>, mark progress twice.</p>
 <p class="mbs12 mbe12">On a <strong>weak hit</strong>, you are successful and mark progress, but also encounter a complication or setback. Envision what occurs and fill a clock segment.</p>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, you fail, or a momentary success is undermined by a dramatic turn of events. Fill a clock segment and <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>. On a <strong>miss with a match</strong>, fill two segments and <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, you fail, or a momentary success is undermined by a dramatic turn of events. Fill a clock segment and <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>. On a <strong>miss with a match</strong>, fill two segments and <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
   </body>
 </html>
