--- a/moves/suffer/withstand_damage.html
+++ b/moves/suffer/withstand_damage.html
@@ -19,17 +19,17 @@
     
   </head>
   <body >
-    <div id="app"><article class="layout flex flex-row"><section class="sidebar"><header class="logotype flex flex-row"><!-- <img alt="logo" class="logo" src="@/img/logo.svg" /> --><h1><span class="title type-display"> Ironsworn:</span><span class="title title-main type-display">Starforged</span><span class="subtitle type-compact">System Resource Document</span></h1></header><nav class="toc card"><section class="moves"><!-- <h2>Moves</h2> --><a href="/starforged-srd/moves/session" class="menu-item h5 type-header">Session Moves</a><a href="/starforged-srd/moves/adventure" class="menu-item h5 type-header">Adventure Moves</a><a href="/starforged-srd/moves/quest" class="menu-item h5 type-header">Quest Moves</a><a href="/starforged-srd/moves/connection" class="menu-item h5 type-header">Connection Moves</a><a href="/starforged-srd/moves/exploration" class="menu-item h5 type-header">Exploration Moves</a><a href="/starforged-srd/moves/combat" class="menu-item h5 type-header">Combat Moves</a><a href="/starforged-srd/moves/suffer" class="menu-item h5 type-header">Suffer Moves</a><a href="/starforged-srd/moves/recover" class="menu-item h5 type-header">Recover Moves</a><a href="/starforged-srd/moves/threshold" class="menu-item h5 type-header">Threshold Moves</a><a href="/starforged-srd/moves/legacy" class="menu-item h5 type-header">Legacy Moves</a><a href="/starforged-srd/moves/fate" class="menu-item h5 type-header">Fate Moves</a><a href="/starforged-srd/moves/scene_challenge" class="menu-item h5 type-header">Scene Challenge Moves</a></section></nav></section><main class="content"><p class="mbs12 mbe12"><strong>When your vehicle faces a damaging situation or environment</strong>, suffer -1 integrity for minor damage, -2 for serious damage, or -3 for major damage. If your integrity is 0, <a href="/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> equal to any remaining damage.</p>
+    <div id="app"><article class="layout flex flex-row"><section class="sidebar"><header class="logotype flex flex-row"><!-- <img alt="logo" class="logo" src="@/img/logo.svg" /> --><h1><span class="title type-display"> Ironsworn:</span><span class="title title-main type-display">Starforged</span><span class="subtitle type-compact">System Resource Document</span></h1></header><nav class="toc card"><section class="moves"><!-- <h2>Moves</h2> --><a href="/starforged-srd/moves/session" class="menu-item h5 type-header">Session Moves</a><a href="/starforged-srd/moves/adventure" class="menu-item h5 type-header">Adventure Moves</a><a href="/starforged-srd/moves/quest" class="menu-item h5 type-header">Quest Moves</a><a href="/starforged-srd/moves/connection" class="menu-item h5 type-header">Connection Moves</a><a href="/starforged-srd/moves/exploration" class="menu-item h5 type-header">Exploration Moves</a><a href="/starforged-srd/moves/combat" class="menu-item h5 type-header">Combat Moves</a><a href="/starforged-srd/moves/suffer" class="menu-item h5 type-header">Suffer Moves</a><a href="/starforged-srd/moves/recover" class="menu-item h5 type-header">Recover Moves</a><a href="/starforged-srd/moves/threshold" class="menu-item h5 type-header">Threshold Moves</a><a href="/starforged-srd/moves/legacy" class="menu-item h5 type-header">Legacy Moves</a><a href="/starforged-srd/moves/fate" class="menu-item h5 type-header">Fate Moves</a><a href="/starforged-srd/moves/scene_challenge" class="menu-item h5 type-header">Scene Challenge Moves</a></section></nav></section><main class="content"><p class="mbs12 mbe12"><strong>When your vehicle faces a damaging situation or environment</strong>, suffer -1 integrity for minor damage, -2 for serious damage, or -3 for major damage. If your integrity is 0, <a href="/starforged-srd/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> equal to any remaining damage.</p>
 <p class="mbs12 mbe12">Then, if your integrity is 0 or you choose to resist the damage, roll +integrity.</p>
 <p class="mbs12 mbe12">On a <strong>strong hit</strong>, choose one.</p>
 <ul>
 <li>Bypass: If your vehicle is not battered, take +1 integrity</li>
 <li>Ride it out: Take +1 momentum</li>
 </ul>
-<p class="mbs12 mbe12">On a <strong>weak hit</strong>, if your vehicle is not battered, you may <a href="/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-1) in exchange for +1 integrity. Otherwise, press on.</p>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, it’s worse than you thought. Suffer an additional -1 integrity or <a href="/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-2). If your integrity is 0, also suffer a cost according to the vehicle type.</p>
+<p class="mbs12 mbe12">On a <strong>weak hit</strong>, if your vehicle is not battered, you may <a href="/starforged-srd/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-1) in exchange for +1 integrity. Otherwise, press on.</p>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, it’s worse than you thought. Suffer an additional -1 integrity or <a href="/starforged-srd/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-2). If your integrity is 0, also suffer a cost according to the vehicle type.</p>
 <ul>
-<li><strong>Command vehicle:</strong> Mark the vehicle as <strong>battered</strong> or <strong>cursed</strong>, mark a module as <strong>broken</strong>, destroy a broken module by discarding it, or roll on the table below. If the command vehicle is destroyed, <a href="/moves/threshold#overcome_destruction" class="link-move">Overcome Destruction</a>.</li>
+<li><strong>Command vehicle:</strong> Mark the vehicle as <strong>battered</strong> or <strong>cursed</strong>, mark a module as <strong>broken</strong>, destroy a broken module by discarding it, or roll on the table below. If the command vehicle is destroyed, <a href="/starforged-srd/moves/threshold#overcome_destruction" class="link-move">Overcome Destruction</a>.</li>
 <li><strong>Support vehicle:</strong> Mark the vehicle as <strong>battered</strong> or roll on the table below. If the vehicle is destroyed, discard the asset.</li>
 <li><strong>Incidental vehicle:</strong> Roll on the table below.</li>
 </ul>
@@ -43,31 +43,31 @@
 <tbody>
 <tr>
 <td>1-10</td>
-<td>Immediate catastrophic destruction. All aboard must <a href="/moves/suffer#endure_harm" class="link-move">Endure Harm</a> or <a href="/moves/threshold#face_death" class="link-move">Face Death</a>, as appropriate.</td>
+<td>Immediate catastrophic destruction. All aboard must <a href="/starforged-srd/moves/suffer#endure_harm" class="link-move">Endure Harm</a> or <a href="/starforged-srd/moves/threshold#face_death" class="link-move">Face Death</a>, as appropriate.</td>
 </tr>
 <tr>
 <td>11-25</td>
-<td>Destruction is imminent and unavoidable. If you do not have the means or intention to get clear, <a href="/moves/suffer#endure_harm" class="link-move">Endure Harm</a> or <a href="/moves/threshold#face_death" class="link-move">Face Death</a>, as appropriate.</td>
+<td>Destruction is imminent and unavoidable. If you do not have the means or intention to get clear, <a href="/starforged-srd/moves/suffer#endure_harm" class="link-move">Endure Harm</a> or <a href="/starforged-srd/moves/threshold#face_death" class="link-move">Face Death</a>, as appropriate.</td>
 </tr>
 <tr>
 <td>26-40</td>
-<td>Destruction is imminent, but can be averted if you <a href="/moves/recover#repair" class="link-move">Repair</a> your vehicle and raise its integrity above 0. If you fail, see 11-25.</td>
+<td>Destruction is imminent, but can be averted if you <a href="/starforged-srd/moves/recover#repair" class="link-move">Repair</a> your vehicle and raise its integrity above 0. If you fail, see 11-25.</td>
 </tr>
 <tr>
 <td>41-55</td>
-<td>You cannot <a href="/moves/recover#repair" class="link-move">Repair</a> this vehicle until you <a href="/moves/recover#resupply" class="link-move">Resupply</a> and obtain a crucial replacement part. If you roll this result again prior to that, see 11-25.</td>
+<td>You cannot <a href="/starforged-srd/moves/recover#repair" class="link-move">Repair</a> this vehicle until you <a href="/starforged-srd/moves/recover#resupply" class="link-move">Resupply</a> and obtain a crucial replacement part. If you roll this result again prior to that, see 11-25.</td>
 </tr>
 <tr>
 <td>56-70</td>
-<td>The vehicle is crippled or out of your control. To get it back in action, you must <a href="/moves/recover#repair" class="link-move">Repair</a> and raise its integrity above 0.</td>
+<td>The vehicle is crippled or out of your control. To get it back in action, you must <a href="/starforged-srd/moves/recover#repair" class="link-move">Repair</a> and raise its integrity above 0.</td>
 </tr>
 <tr>
 <td>71-85</td>
-<td>It’s a rough ride. All aboard must make the <a href="/moves/suffer#endure_harm" class="link-move">Endure Harm</a>, <a href="/moves/suffer#endure_stress" class="link-move">Endure Stress</a>, or <a href="/moves/suffer#companion_takes_a_hit" class="link-move">Companion Takes a Hit</a> move, suffering a serious (-2) cost.</td>
+<td>It’s a rough ride. All aboard must make the <a href="/starforged-srd/moves/suffer#endure_harm" class="link-move">Endure Harm</a>, <a href="/starforged-srd/moves/suffer#endure_stress" class="link-move">Endure Stress</a>, or <a href="/starforged-srd/moves/suffer#companion_takes_a_hit" class="link-move">Companion Takes a Hit</a> move, suffering a serious (-2) cost.</td>
 </tr>
 <tr>
 <td>86-95</td>
-<td>You’ve lost fuel, energy, or cargo. <a href="/moves/suffer#sacrifice_resources" class="link-move">Sacrifice Resources</a> (-2).</td>
+<td>You’ve lost fuel, energy, or cargo. <a href="/starforged-srd/moves/suffer#sacrifice_resources" class="link-move">Sacrifice Resources</a> (-2).</td>
 </tr>
 <tr>
 <td>96-100</td>
