--- a/moves/threshold/face_death.html
+++ b/moves/threshold/face_death.html
@@ -24,7 +24,7 @@
 <p class="mbs12 mbe12">On a <strong>weak hit</strong>, choose one.</p>
 <ul>
 <li>You die, but not before making a noble sacrifice. Envision your final moments.</li>
-<li>There is more to be done. Envision what is revealed or asked of you at death&#39;s door, and <a href="/moves/quest#swear_an_iron_vow" class="link-move">Swear an Iron Vow</a> to complete an extreme quest. You return to the mortal world and must mark <strong>doomed</strong>. When you complete the deathbound quest, clear the impact.</li>
+<li>There is more to be done. Envision what is revealed or asked of you at death&#39;s door, and <a href="/starforged-srd/moves/quest#swear_an_iron_vow" class="link-move">Swear an Iron Vow</a> to complete an extreme quest. You return to the mortal world and must mark <strong>doomed</strong>. When you complete the deathbound quest, clear the impact.</li>
 </ul>
 <p class="mbs12 mbe12">On a <strong>miss</strong>, you are dead.</p></main></article></div>
   </body>
