--- a/moves/threshold/face_desolation.html
+++ b/moves/threshold/face_desolation.html
@@ -24,7 +24,7 @@
 <p class="mbs12 mbe12">On a <strong>weak hit</strong>, choose one.</p>
 <ul>
 <li>Your spirit breaks, but not before you make a noble sacrifice. Envision your final moments.</li>
-<li>You see a vision of a dreaded event coming to pass. Envision that dark future, and <a href="/moves/quest#swear_an_iron_vow" class="link-move">Swear an Iron Vow</a> to prevent it through an extreme quest. You return to your senses and must mark <strong>tormented</strong>. When you complete the soul-bound quest, clear the impact.</li>
+<li>You see a vision of a dreaded event coming to pass. Envision that dark future, and <a href="/starforged-srd/moves/quest#swear_an_iron_vow" class="link-move">Swear an Iron Vow</a> to prevent it through an extreme quest. You return to your senses and must mark <strong>tormented</strong>. When you complete the soul-bound quest, clear the impact.</li>
 </ul>
 <p class="mbs12 mbe12">On a <strong>miss</strong>, you succumb to despair or horror and are lost.</p></main></article></div>
   </body>
