--- a/moves/combat/take_decisive_action.html
+++ b/moves/combat/take_decisive_action.html
@@ -33,7 +33,7 @@
 <tbody>
 <tr>
 <td>1-40</td>
-<td>It’s worse than you thought: Make a <a href="/moves/suffer" class="link-move">suffer move</a> (-2)</td>
+<td>It’s worse than you thought: Make a <a href="/starforged-srd/moves/suffer" class="link-move">suffer move</a> (-2)</td>
 </tr>
 <tr>
 <td>41-52</td>
@@ -57,6 +57,6 @@
 </tr>
 </tbody>
 </table>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, you are defeated or your objective is lost. <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, you are defeated or your objective is lost. <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
   </body>
 </html>
