--- a/moves/exploration/set_a_course.html
+++ b/moves/exploration/set_a_course.html
@@ -23,9 +23,9 @@
 <p class="mbs12 mbe12">On a <strong>strong hit</strong>, you reach your destination and the situation there favors you. Take +1 momentum.</p>
 <p class="mbs12 mbe12">On a <strong>weak hit</strong>, you arrive, but face a cost or complication. Choose one.</p>
 <ul>
-<li>Suffer costs en route: Make a <a href="/moves/suffer" class="link-move">suffer move</a> (-2), or two <a href="/moves/suffer" class="link-move">suffer moves</a> (-1).</li>
+<li>Suffer costs en route: Make a <a href="/starforged-srd/moves/suffer" class="link-move">suffer move</a> (-2), or two <a href="/starforged-srd/moves/suffer" class="link-move">suffer moves</a> (-1).</li>
 <li>Face a complication at the destination: Envision what you encounter.</li>
 </ul>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, you are waylaid by a significant threat, and must <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>. If you overcome this obstacle, you may push on safely to your destination.</p></main></article></div>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, you are waylaid by a significant threat, and must <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>. If you overcome this obstacle, you may push on safely to your destination.</p></main></article></div>
   </body>
 </html>
