--- a/moves/recover/repair.html
+++ b/moves/recover/repair.html
@@ -24,7 +24,7 @@
 <li>Make your own repairs, or direct a companion to make repairs: Roll +wits</li>
 <li>Obtain repairs from someone (not an ally): Roll +supply</li>
 </ul>
-<p class="mbs12 mbe12">On a <strong>hit</strong>, you gain repair points as appropriate to the situation, per the table below. Additionally, you may <a href="/moves/suffer#sacrifice_resources" class="link-move">Sacrifice Resources</a> and exchange each -1 of supply for 1 extra repair point (up to 3 points).</p>
+<p class="mbs12 mbe12">On a <strong>hit</strong>, you gain repair points as appropriate to the situation, per the table below. Additionally, you may <a href="/starforged-srd/moves/suffer#sacrifice_resources" class="link-move">Sacrifice Resources</a> and exchange each -1 of supply for 1 extra repair point (up to 3 points).</p>
 <table class="table table-striped">
 <thead>
 <tr>
@@ -60,6 +60,6 @@
 <li>Repair any other device: 3 points</li>
 <li>Repair any other device, but with a complication or malfunction: 2 points</li>
 </ul>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, the repairs are not made and the situation worsens. <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, the repairs are not made and the situation worsens. <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
   </body>
 </html>
