--- a/moves/scene_challenge/secure_an_advantage.html
+++ b/moves/scene_challenge/secure_an_advantage.html
@@ -32,6 +32,6 @@
 <li>Take +2 momentum</li>
 <li>Add +1 on your next move (not a progress move)</li>
 </ul>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, you fail or your assumptions betray you. Fill a clock segment and <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>. On a <strong>miss with a match</strong>, fill two segments and <a href="/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, you fail or your assumptions betray you. Fill a clock segment and <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>. On a <strong>miss with a match</strong>, fill two segments and <a href="/starforged-srd/moves/fate#pay_the_price" class="link-move">Pay the Price</a>.</p></main></article></div>
   </body>
 </html>
