--- a/moves/suffer/endure_stress.html
+++ b/moves/suffer/endure_stress.html
@@ -19,15 +19,15 @@
     
   </head>
   <body >
-    <div id="app"><article class="layout flex flex-row"><section class="sidebar"><header class="logotype flex flex-row"><!-- <img alt="logo" class="logo" src="@/img/logo.svg" /> --><h1><span class="title type-display"> Ironsworn:</span><span class="title title-main type-display">Starforged</span><span class="subtitle type-compact">System Resource Document</span></h1></header><nav class="toc card"><section class="moves"><!-- <h2>Moves</h2> --><a href="/starforged-srd/moves/session" class="menu-item h5 type-header">Session Moves</a><a href="/starforged-srd/moves/adventure" class="menu-item h5 type-header">Adventure Moves</a><a href="/starforged-srd/moves/quest" class="menu-item h5 type-header">Quest Moves</a><a href="/starforged-srd/moves/connection" class="menu-item h5 type-header">Connection Moves</a><a href="/starforged-srd/moves/exploration" class="menu-item h5 type-header">Exploration Moves</a><a href="/starforged-srd/moves/combat" class="menu-item h5 type-header">Combat Moves</a><a href="/starforged-srd/moves/suffer" class="menu-item h5 type-header">Suffer Moves</a><a href="/starforged-srd/moves/recover" class="menu-item h5 type-header">Recover Moves</a><a href="/starforged-srd/moves/threshold" class="menu-item h5 type-header">Threshold Moves</a><a href="/starforged-srd/moves/legacy" class="menu-item h5 type-header">Legacy Moves</a><a href="/starforged-srd/moves/fate" class="menu-item h5 type-header">Fate Moves</a><a href="/starforged-srd/moves/scene_challenge" class="menu-item h5 type-header">Scene Challenge Moves</a></section></nav></section><main class="content"><p class="mbs12 mbe12"><strong>When you face mental strain, shock, or despair</strong>, suffer -1 spirit for minor stress, -2 for serious stress, or -3 for major stress. If your spirit is 0, <a href="/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> equal to any remaining stress.</p>
+    <div id="app"><article class="layout flex flex-row"><section class="sidebar"><header class="logotype flex flex-row"><!-- <img alt="logo" class="logo" src="@/img/logo.svg" /> --><h1><span class="title type-display"> Ironsworn:</span><span class="title title-main type-display">Starforged</span><span class="subtitle type-compact">System Resource Document</span></h1></header><nav class="toc card"><section class="moves"><!-- <h2>Moves</h2> --><a href="/starforged-srd/moves/session" class="menu-item h5 type-header">Session Moves</a><a href="/starforged-srd/moves/adventure" class="menu-item h5 type-header">Adventure Moves</a><a href="/starforged-srd/moves/quest" class="menu-item h5 type-header">Quest Moves</a><a href="/starforged-srd/moves/connection" class="menu-item h5 type-header">Connection Moves</a><a href="/starforged-srd/moves/exploration" class="menu-item h5 type-header">Exploration Moves</a><a href="/starforged-srd/moves/combat" class="menu-item h5 type-header">Combat Moves</a><a href="/starforged-srd/moves/suffer" class="menu-item h5 type-header">Suffer Moves</a><a href="/starforged-srd/moves/recover" class="menu-item h5 type-header">Recover Moves</a><a href="/starforged-srd/moves/threshold" class="menu-item h5 type-header">Threshold Moves</a><a href="/starforged-srd/moves/legacy" class="menu-item h5 type-header">Legacy Moves</a><a href="/starforged-srd/moves/fate" class="menu-item h5 type-header">Fate Moves</a><a href="/starforged-srd/moves/scene_challenge" class="menu-item h5 type-header">Scene Challenge Moves</a></section></nav></section><main class="content"><p class="mbs12 mbe12"><strong>When you face mental strain, shock, or despair</strong>, suffer -1 spirit for minor stress, -2 for serious stress, or -3 for major stress. If your spirit is 0, <a href="/starforged-srd/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> equal to any remaining stress.</p>
 <p class="mbs12 mbe12">Then, if your spirit is 0 or you choose to resist the stress, roll +spirit or +heart, whichever is higher.</p>
 <p class="mbs12 mbe12">On a <strong>strong hit</strong>, choose one.</p>
 <ul>
 <li>Shake it off: If you are not shaken, take +1 spirit</li>
 <li>Embrace the darkness: Take +1 momentum</li>
 </ul>
-<p class="mbs12 mbe12">On a <strong>weak hit</strong>, if you are not shaken, you may <a href="/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-1) in exchange for +1 spirit. Otherwise, press on.</p>
-<p class="mbs12 mbe12">On a <strong>miss</strong>, it's worse than you thought. Suffer an additional -1 spirit or <a href="/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-2). If your spirit is 0, you must also mark shaken or traumatized, or roll on the table below.</p>
+<p class="mbs12 mbe12">On a <strong>weak hit</strong>, if you are not shaken, you may <a href="/starforged-srd/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-1) in exchange for +1 spirit. Otherwise, press on.</p>
+<p class="mbs12 mbe12">On a <strong>miss</strong>, it's worse than you thought. Suffer an additional -1 spirit or <a href="/starforged-srd/moves/suffer#lose_momentum" class="link-move">Lose Momentum</a> (-2). If your spirit is 0, you must also mark shaken or traumatized, or roll on the table below.</p>
 <table class="table table-striped">
 <thead>
 <tr>
@@ -38,11 +38,11 @@
 <tbody>
 <tr>
 <td>1-10</td>
-<td>You are overwhelmed. <a href="/moves/threshold#face_desolation" class="link-move">Face Desolation</a>.</td>
+<td>You are overwhelmed. <a href="/starforged-srd/moves/threshold#face_desolation" class="link-move">Face Desolation</a>.</td>
 </tr>
 <tr>
 <td>11-25</td>
-<td>You give up. <a href="/moves/quest#forsake_your_vow" class="link-move">Forsake Your Vow</a>.</td>
+<td>You give up. <a href="/starforged-srd/moves/quest#forsake_your_vow" class="link-move">Forsake Your Vow</a>.</td>
 </tr>
 <tr>
 <td>26-50</td>
